[package]
name = "polycube-v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bevy = "0.11.2"
bevy_egui = "0.21.0"
smooth-bevy-cameras = "0.9.0"

stl_io = "0.7.0"
rfd = "0.12.0"
rand = "0.8.5"
ordered-float = "4.1.0"
rayon = "1.8.0"
itertools = "0.11.0"
simple-error = "0.3.0"
strum = "0.25.0"
strum_macros = "0.25.3"
serde = "1.0.193"
serde_json = "1.0.108"
